force-app/main/default/objects/Industry_Code__c/Industry_Code__c.object-meta.xml
<CustomObject>
    <description>Object to store the list of industry codes.</description>
    <label>Industry Code</label>
    <nameField>
        <label>Industry Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>