force-app/main/default/objects/Industry_Code__c/fields/Integration_G1SMS_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_G1SMS_Id__c</fullName>
    <externalId>true</externalId>
    <label>Global OneSMS Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>