force-app/main/default/objects/Industry_Code__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <description>Used by Integration team</description>
    <externalId>true</externalId>
    <label>Yokogawa Code</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>