force-app/main/default/objects/Industry_Code__c/fields/Parentid__c.field-meta.xml
<CustomField>
    <fullName>Parentid__c</fullName>
    <label>Parentid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>