force-app/main/default/objects/Industry_Code__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Classification this code belongs to</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAICS</fullName>
            </value>
            <value>
                <fullName>SIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>