force-app/main/default/objects/Industry_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>